--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 						</header>
 						<br>
 						<img class="fit-picture"
-								src="C:\Users\Ewan D Jones\Desktop\PRO DEV\html5up-twenty\images\Profile Pic.jpg" width="300" height="300"
+								src="\images\Profile Pic.jpg" width="300" height="300"
 								alt="This is me!">
 						<br>
 						<a href="https://twitter.com/EwanTheDJ">
-							<img src="C:\Users\Ewan D Jones\Desktop\PRO DEV\html5up-twenty\images\Twitter Logo.png" width="50" height="50"
+							<img src="\images\Twitter Logo.png" width="50" height="50"
 							alt="My Twitter!">
 
 						<a href="https://www.linkedin.com/in/ewan-jones-b906761b8/">
