--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Pro Dev Website <span> by Ewan Jones</span></a></h1>
+					<h1 id="logo"><a href="index.html">University Portfolio Website <span> by Ewan Jones</span></a></h1>
 				</header>
 
 			<!-- Banner -->
@@ -33,12 +33,14 @@
 
 						<header>
 							<h2>Ewan Jones</h2>
-							<h3>Welcome to my portfolio!<h3>
+							<h3>Welcome to my University portfolio!<h3>
 
 						</header>
 						<br>
 						<img class="fit-picture"
-						<a href="#" class="image featured"><img src="images/Profile Pic.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/NewProfilePic.jpg" alt="" /></a>
+						<br>
+						<a href="#" class="image featured"><img src="images/GamesDevCover.jpg" alt="" /></a>
 						<br>
 						<a href="https://twitter.com/EwanTheDJ" class="images"><img src="images/Twitter Logo.png" height="50" width="50" /></a>
 						<a href="https://www.linkedin.com/in/ewan-jones-b906761b8/" class="images"><img src="images/Linkedin Logo.png" height="50" width="50" /></a>
@@ -148,24 +150,36 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="images"><img src="images/pacmanplaceholder.png" height="300" width="" /></a>
+										<a href="https://github.com/EwanTheDJ/PacMan" class="images"><img src="images/pacmanplaceholder.png" height="300" width="" /></a>
 
 										<header>
 											<h3>Semester 1: <strong>Pacman!</strong></h3>
 										</header>
-										<p><strong>UNFINISHED FOR NOW</strong> <br>In semester 1, I am creating a pacman game from scratch using the University's S2D framework, its been really fun so far!</p>
+										<p><strong>UNFINISHED FOR NOW</strong> <br>In semester 1, I created a pacman game from scratch using the University's S2D framework for my FOGGS assignment, it definitely needs some extra work but i'm happy with it for my first attempt!</p>
 									</section>
 
 								</div>
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="images"><img src="images/MarioPlaceholder.jpg" height="300" width="" /></a>
+										<a href="https://github.com/EwanTheDJ/Semester-2-Foggs" class="images"><img src="images/HelloGL.png" height="300" width="" /></a>
+
+										<header>
+											<h3>Semester 2: <strong>HelloGL!</strong></h3>
+										</header>
+										<p><strong>WORK IN PROGRESS</strong><br>In semester 2, I will be creating a simple OpenGL program using freeGLUT for my FOGGS assignment. </p>
+									</section>
+
+								</div>
+								<div class="col-6 col-12-narrower">
+
+									<section>
+										<a href="https://github.com/EwanTheDJ/Mario" class="images"><img src="images/MarioBros.jpg" height="300" width="" /></a>
 
 										<header>
 											<h3>Semester 2: <strong>Mario!</strong></h3>
 										</header>
-										<p><strong>YET TO START</strong><br>In semester 2, I will be creating Super Mario Bros' World 1-1 using the S2D framework, I can't wait!</p>
+										<p><strong>WORK IN PROGRESS</strong><br>In semester 2, I will be creating Mario Bros using the S2D framework for my Game Engine Creation assignment. </p>
 									</section>
 
 
